[package]
name = "rtde-wm"
version = "1.1.0"
edition = "2021"
authors = ["Dmitri Proskuriakov <dmitri.proskuriakov@gmail.com>"]

[[bin]]
name = "rtwm"
path = "src/main.rs"

[dependencies]
libc = "0.2.133"
nix = "0.26.2"
x11 = "2.20.0"

[profile.release-dyn]
inherits = 'release'
opt-level = 'z'  # Optimize for size
# lto = true       # Link-Time Optimization
# panic = 'abort'  # Avoid panic unwind tables
strip = true     # Automatically strip symbols
